# watcher

./: Cargo.toml  config.toml.example  identity_events.db  setup.sh
src/: config.rs  main.rs  watcher.rs
