[package]
name = "substrate-identity-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
codec = { package = "parity-scale-codec", version = "3.2", features = ["derive"] }
futures = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
subxt = "0.37"
tokio = { version = "1.28", features = ["full"] }
toml = "0.8"
